--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
 	<title>Hello Akhtar!</title>
 </head>
 <body>
-<h1>Hello Akhtar!</h1>
+<h1>Hello Akhtar!
+This Course Would be Great.</h1>
 </body>
 </html>
